# depends

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml  build_cc.yaml  build_chrono.yaml  build_codec.yaml  build_cxx_core_cc.yaml  build_cxx_core_chrono.yaml  build_cxx_core_codec.yaml  build_cxx_core_fp.yaml  build_cxx_core_mp.yaml  build_cxx_core_pp.yaml  build_cxx_core_string.yaml  build_cxx_core_tuple.yaml  build_cxx_core_util.yaml  build_cxx_coro_stream.yaml  build_cxx_ply.yaml  build_fp.yaml  build_mp.yaml  build_ply.yaml  build_pp.yaml  build_strand.yaml  build_stream.yaml  build_string.yaml  build_tuple.yaml  build_util.yaml
cmake/: add_check_target.cmake  add_intermediate_targets.cmake  bigt.cmake  bzip2.cmake  cppflow.cmake  cpr.cmake  date.cmake  fmt.cmake  googletest.cmake  helpers.cmake  httpserver.cmake  json.cmake  libzmq.cmake  pugixml.cmake  termox.cmake  zlib.cmake  zstd.cmake
cxx_bzip2/: CMakeLists.txt
cxx_core_mp/: CMakeLists.txt
cxx_core_pp/: CMakeLists.txt
cxx_date/: CMakeLists.txt
cxx_googletest/: CMakeLists.txt
depends/: datelib.cmake  fmtlib.cmake  googletest.cmake  zstd.cmake
patches/: google-cloud-cpp-depend.patch  libmicrohttpd.patch
projects/: date.cmake  fmt.cmake  httpserver.cmake  termox.cmake  xml.cmake
recipes/: bigtable.cmake  bzip2.cmake  cppflow.cmake  cpr.cmake  cxx_core_pp.cmake  date.cmake  fmt.cmake  googletest.cmake  httpserver.cmake  inja.cmake  ixwebsocket.cmake  json.cmake  ranges.cmake  spdlog.cmake  termox.cmake  uwebsockets.cmake  xml.cmake  xtensor.cmake  zlib.cmake  zmq.cmake  zstd.cmake
recipes/bzip2/: CMakeLists.txt
recipes/cc/: CMakeLists.txt
recipes/chrono/: CMakeLists.txt
recipes/codec/: CMakeLists.txt
recipes/cppzmq/: CMakeLists.txt
recipes/cpr/: CMakeLists.txt
recipes/cxx_bzip2/: CMakeLists.txt
recipes/cxx_core_cc/: CMakeLists.txt
recipes/cxx_core_chrono/: CMakeLists.txt
recipes/cxx_core_codec/: CMakeLists.txt
recipes/cxx_core_fp/: CMakeLists.txt
recipes/cxx_core_mp/: CMakeLists.txt
recipes/cxx_core_pp/: CMakeLists.txt
recipes/cxx_core_string/: CMakeLists.txt
recipes/cxx_core_tuple/: CMakeLists.txt
recipes/cxx_core_util/: CMakeLists.txt
recipes/cxx_coro_strand/: CMakeLists.txt
recipes/cxx_coro_stream/: CMakeLists.txt
recipes/cxx_cppzmq/: CMakeLists.txt
recipes/cxx_cpr/: CMakeLists.txt
recipes/cxx_date/: CMakeLists.txt
recipes/cxx_fmt/: CMakeLists.txt
recipes/cxx_googletest/: CMakeLists.txt
recipes/cxx_inja/: CMakeLists.txt
recipes/cxx_ixwebsocket/: CMakeLists.txt
recipes/cxx_json/: CMakeLists.txt
recipes/cxx_libzmq/: CMakeLists.txt
recipes/cxx_ply/: CMakeLists.txt
recipes/cxx_spdlog/: CMakeLists.txt
recipes/cxx_xsimd/: CMakeLists.txt
recipes/cxx_xtensor/: CMakeLists.txt
recipes/cxx_xtl/: CMakeLists.txt
recipes/cxx_zstd/: CMakeLists.txt
recipes/date/: CMakeLists.txt
recipes/fmt/: CMakeLists.txt
recipes/fp/: CMakeLists.txt
recipes/googletest/: CMakeLists.txt
recipes/inja/: CMakeLists.txt
recipes/ixwebsocket/: CMakeLists.txt
recipes/json/: CMakeLists.txt
recipes/libzmq/: CMakeLists.txt
recipes/mp/: CMakeLists.txt
recipes/ply/: CMakeLists.txt
recipes/pp/: CMakeLists.txt
recipes/spdlog/: CMakeLists.txt
recipes/strand/: CMakeLists.txt
recipes/stream/: CMakeLists.txt
recipes/string/: CMakeLists.txt
recipes/todo/: bigtable.cmake  cppflow.cmake  httpserver.cmake  inja.cmake  ixwebsocket.cmake  termox.cmake
recipes/tuple/: CMakeLists.txt
recipes/util/: CMakeLists.txt
recipes/xsimd/: CMakeLists.txt
recipes/xtensor/: CMakeLists.txt
recipes/xtl/: CMakeLists.txt
recipes/zstd/: CMakeLists.txt
